# clipboard-plus

./: README.md  package-lock.json  package.json
src/: App.tsx  bindings.ts  index.css  main.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2025-12-31-194559-0000_create_items/: up.sql
src-tauri/src/: clipboard_listener.rs  commands.rs  events.rs  lib.rs  main.rs  models.rs  schema.rs
